@startuml
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

left to right direction

entity TagSource{
    * **uid**
    __
    type
    name
    model_info
}

entity TaggingEvent{
    * **uid**
    __
    * taggerl_id
    run_time
    accuracy
}

entity Dataset{
    * **uid**
    ___
    * event_id
    * asset_id
    asset_locator
    tags

}

entity Tag <<sub-document>> {
    name
    value 
    confidence
    * event_id
}


TagSource ||..o{ TaggingEvent
TaggingEvent ||..o{ Dataset
Dataset ||..o{ Tag
@enduml
